--- a/Pick Up Basketball/Base.lproj/LaunchScreen.storyboard
+++ b/Pick Up Basketball/Base.lproj/LaunchScreen.storyboard
@@ -16,28 +16,36 @@
                         <viewControllerLayoutGuide type="bottom" id="xb3-aO-Qok"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LogoHD" translatesAutoresizingMaskIntoConstraints="NO" id="Mvv-sF-1hw">
-                                <rect key="frame" x="186" y="186" width="228" height="228"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="appGradient" translatesAutoresizingMaskIntoConstraints="NO" id="PYd-nU-qgl">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LogoHD-Done" translatesAutoresizingMaskIntoConstraints="NO" id="Mvv-sF-1hw">
+                                <rect key="frame" x="99" y="223" width="122" height="122"/>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" red="0.01790791421" green="0.018131583239999999" blue="0.018309294869999999" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
+                            <constraint firstAttribute="bottom" secondItem="PYd-nU-qgl" secondAttribute="bottom" id="1WL-N5-fWs"/>
                             <constraint firstItem="Mvv-sF-1hw" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="1k7-0d-R1G"/>
+                            <constraint firstAttribute="trailing" secondItem="PYd-nU-qgl" secondAttribute="trailing" id="2ef-pX-ntW"/>
                             <constraint firstItem="Mvv-sF-1hw" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="F79-Ov-BeI"/>
+                            <constraint firstItem="PYd-nU-qgl" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="TbN-Jc-CpR"/>
                             <constraint firstItem="Mvv-sF-1hw" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" multiplier="0.38" id="VNV-iX-0EC"/>
                             <constraint firstItem="Mvv-sF-1hw" firstAttribute="height" secondItem="Ze5-6b-2t3" secondAttribute="width" multiplier="0.38" id="b73-0y-YHy"/>
+                            <constraint firstItem="PYd-nU-qgl" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="kwe-cO-vqz"/>
                         </constraints>
                     </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="-37" y="375"/>
         </scene>
     </scenes>
     <resources>
-        <image name="LogoHD" width="320" height="320"/>
+        <image name="LogoHD-Done" width="320" height="320"/>
+        <image name="appGradient" width="252" height="267"/>
     </resources>
 </document>
